--- a/index.html
+++ b/index.html
@@ -11,37 +11,21 @@
     <div></div>
 </body>
 <body>
-    <section id="sitetitle">Welcome to Bucket Lounge Systems</section>
-    <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a>
+    <section id="sitetitle">Welcome to Bucket Lounge Systems!</section>
+    <div>
+        <section id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper:</section>
+    </div>
+    <div>
+        <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a>
+    </div>
     <div>
         <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a>
     </div>
     <div>
         <a id="Discord", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a>
-
     </div>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyDwTtT8aSO0PDVYctqkmP_s-gKgPbaC9w0",
-          authDomain: "bucket-systems.firebaseapp.com",
-          projectId: "bucket-systems",
-          storageBucket: "bucket-systems.appspot.com",
-          messagingSenderId: "8822622114",
-          appId: "1:8822622114:web:a96aeed0e92d034b4e54fb",
-          measurementId: "G-3VRC8RFLX4"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-      </script>
+    <div>
+        <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    </div>
 </body>
 </html>
