Updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 <body>
     <section id="sitetitle">Welcome to Bucket Lounge Systems!</section>
     <div>
-        <section id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper:</section>
+        <section id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</section>
     </div>
     <div>
+        <uptmrobot id="uptmrobot">Current Bot Status:</uptmrobot>
         <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a>
     </div>
     <div>
+        <dscrd id="dscrd">The Bucket Lounge Discord Server:</dscrd>
         <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a>
     </div>
     <div>
-        <a id="Discord", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a>
+        <replt id="replt">Replit Page:</replt>
+        <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a>
+    </div>
+    <div>
+        <githb id="githb">Github Repository:</githb>
+        <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a>
     </div>
     <div>
         <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
