--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <docs id="dcs" style="font-weight: 700; font-family: Roboto;">Bucket Helper Docs:</docs>
-        <a id="doocs" href="https://bucketlounge.tk/docs.html" style="font-family: Roboto;">Docs</a>
+        <a id="doocs" href="https://bucketlounge.tk/docs.html" style="font-family: Roboto; display: inline-docs;">Docs</a>
     </div>
     <div>
         <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="342" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
