--- a/docs.html
+++ b/docs.html
@@ -39,7 +39,8 @@
         ‘%youtube’: Shows an embed with the Bucket Lounge Youtube Channels. Alias: %yt .
         %kick’: Kicks a member for a specified reason. Usage: %kick <member> <reason>. This command requires you to have the Kick Members permission! <br>
         ‘%ban’: Bans a member for a specified reason. Usage: %ban <member> <reason>. This command requires you to have the Ban Members permission! <br>
-        ‘%link_embedder’: Embed the specified link in an embed. Usage: %link_embedder <text> < link>. Multiple words in <text> must be in quotation marks like this: “multi word statement” <link> <br><br>
+        ‘%link_embedder’: Embed the specified link in an embed. Usage: %link_embedder <text> < link>. Multiple words in <text> must be in quotation marks like this: “multi word statement” <link> <br>
+        ‘%repeat’: Repeats the specified text. Usage: %repeat <text>. <br><br>
         </text>
     </div>
     <div>
