--- a/index.html
+++ b/index.html
@@ -30,32 +30,29 @@
 <body>
     <div></div>
 </body>
-<body>
-    <section id="sitetitle">Welcome to Bucket Lounge Systems!</section>
-    <div>
-        <section id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</section>
+<body id="newbody">
+    <div id="sidetitle_div" class="grid">
+    <h1 id="sitetitle">Welcome to Bucket Lounge Systems!</h1>
     </div>
-    <div>
-        <uptmrobot id="uptmrobot">Current Bot Status:</uptmrobot>
-        <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a>
+    <div class="grid">
+        <welcome_msg id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
     </div>
-    <div>
-        <dscrd id="dscrd">The Bucket Lounge Discord Server:</dscrd>
-        <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a>
+    <div class="grid">
+        <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
     </div>
-    <div>
-        <replt id="replt">Replit Page:</replt>
-        <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a>
+    <div class="grid">
+        <dscrd id="dscrd">The Bucket Lounge Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
     </div>
-    <div>
-        <githb id="githb">Github Repository:</githb>
-        <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a>
+    <div class="grid">
+        <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
     </div>
-    <div>
-        <docs id="dcs">Bucket Helper Docs:</docs>
-        <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a>
+    <div class="grid">
+        <githb id="githb">Github Repository: <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
     </div>
-    <div>
+    <div class="grid">
+        <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+    </div>
+    <div class="grid">
         <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="342" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>
 </body>
