--- a/index.html
+++ b/index.html
@@ -31,29 +31,33 @@
     <div></div>
 </body>
 <body id="newbody">
-    <div id="sidetitle_div" class="grid">
-    <h1 id="sitetitle">Welcome to Bucket Lounge Systems!</h1>
-    </div>
-    <div class="grid">
-        <welcome_msg id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
-    </div>
-    <div class="grid">
-        <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
-    </div>
-    <div class="grid">
-        <dscrd id="dscrd">The Bucket Lounge Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
-    </div>
-    <div class="grid">
-        <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
-    </div>
-    <div class="grid">
-        <githb id="githb">Github Repository: <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
-    </div>
-    <div class="grid">
-        <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
-    </div>
-    <div class="grid">
-        <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="342" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <div>
+        <div id="sidetitle_div" class="gridcenter">
+            <h1 id="sitetitle">Welcome to Bucket Lounge Systems!</h1>
+        </div>
+        <div class="grid">
+            <div>
+                <welcome_msg id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
+            </div>
+            <div>
+                <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
+            </div>
+            <div>
+                <dscrd id="dscrd">The Bucket Lounge Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
+            </div>
+            <div>
+                <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
+            </div>
+            <div>
+                <githb id="githb">Github Repository: <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
+            </div>
+            <div>
+                <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+            </div>
+            <div>
+                <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="342" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </div>
+        </div>
     </div>
 </body>
 </html>
