--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-TileImage" content="favicons/favicon-144.png">
 	<meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bucket Lounge Systems</title>
 </head>
 <body>
