index.html now fits phone screens correctly

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme_color">
+    <meta name="description" content="Bucket Lounge - Official Site">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"><link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="favicons/favicon.ico">
@@ -32,11 +35,10 @@
     <div></div>
 </body>
 <body id="newbody">
-    <div>
-        <div id="sidetitle_div" class="gridcenter">
-            <h1 id="sitetitle">Welcome to Bucket Lounge Systems!</h1>
-        </div>
-        <div class="grid">
+        <div style="align-content: inherit;" class="grid">
+            <div>
+                <sttitle id="sitetitle">Welcome to Bucket Lounge!<br><br></sttitle>
+            </div>
             <div>
                 <welcome_msg id="welcome_msg">You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
             </div>
@@ -44,7 +46,7 @@
                 <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
             </div>
             <div>
-                <dscrd id="dscrd">The Bucket Lounge Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
+                <dscrd id="dscrd">The Disocrd Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
             </div>
             <div>
                 <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
@@ -56,7 +58,7 @@
                 <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
             </div>
             <div>
-                <iframe id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="342" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                <iframe title="Widget" id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="320" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">Discord Widget</iframe>
             </div>
         </div>
     </div>
