--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-stylesheet.css" />
+    <link rel="stylesheet" href="./printsheet.css" type="text/css" media="print">
     <link rel="shortcut icon" href="favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="favicons/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="favicons/favicon-192.png">
@@ -118,7 +119,7 @@
             <p id=big-dc class="grid">Discord</p>
             <iframe class="grid" title="Widget" id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="320" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" style="border: 3px solid white; border-radius: 5%;">Discord Widget</iframe>
           </div>
-          <div class="wavesupside" style="margin-top: 2%">
+          <div class="wavesupside" id="lastwave">
             <svg
               preserveAspectRatio="none"
               viewBox="0 0 1920 120"
