--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme_color">
     <meta name="description" content="Bucket Lounge - Official Site">
     <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-stylesheet.css" />
     <link rel="stylesheet" href="./printsheet.css" type="text/css" media="print">
@@ -32,7 +33,7 @@
 	<meta name="msapplication-TileImage" content="favicons/favicon-144.png">
 	<meta name="msapplication-config" content="/browserconfig.xml">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bucket Lounge Systems</title>
+    <title>Bucket Lounge</title>
 </head>
 <body>
     <div></div>
@@ -40,7 +41,7 @@
 <body id="newbody">
     <div>
       <div>
-          <sttitle id="sitetitle" class="grid">Welcome to Bucket Lounge!</sttitle>
+          <sttitle id="sitetitle" class="grid">Bucket Lounge</sttitle>
       </div>
     </div>
       <div class="waves" style="margin-left: -0.02%;">
