--- a/tools-and-software/index.html
+++ b/tools-and-software/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Bucket Lounge - Official Site">
     <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-stylesheet.css" />
-    <link rel="stylesheet" href="./printsheet.css" type="text/css" media="print">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
+    <link rel="stylesheet" href="../style.css" type="text/css">
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../mobile-stylesheet.css" />
+    <link rel="stylesheet" href="../printsheet.css" type="text/css" media="print">
     <link rel="shortcut icon" href="favicons/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="favicons/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="favicons/favicon-192.png">
@@ -63,23 +63,23 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_msg"><br><br>You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
+        <welcome_msg id="welcome_msg" style="text-align: center;"><br><br>All the Tools and Software I'm using!<br><br>Software:</welcome_msg>
       </div>
         <div class="grid">
           <div>
-              <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
+              <uptmrobot id="uptmrobot">Visual Studio Code: <a id="Uptime", href="https://code.visualstudio.com/", type="submit">Visual Studio</a></uptmrobot>
           </div>
           <div>
-              <dscrd id="dscrd">The Disocrd Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
+              <dscrd id="dscrd">Git/Github <a id="Discord", href="https://github.com/", type="submit">Github</a></dscrd>
           </div>
           <div>
-              <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
+              <replt id="replt">Replit: <a id="Replit", href="https://repl.it/", type="submit">Replit</a></replt>
           </div>
           <div>
-              <githb id="githb">Github Repository: <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
+              <githb id="githb">Uptime Robot: <a id="Github" href="https://uptimerobot.com/" type="submit">Uptime Robot</a></githb>
           </div>
           <div>
-              <docs id="dcs">Tools and Software: <a id="doocs" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
+              <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
           </div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
