--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_msg"><br><br>You can find all the links to our socials and Services such as Bucket Helper</welcome_msg>
+        <welcome_msg id="welcome_msg"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
       </div>
         <div class="grid">
           <div>
               <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
           </div>
           <div>
-              <dscrd id="dscrd">The Disocrd Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
+              <dscrd id="dscrd">The Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
           </div>
           <div>
               <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
