--- a/tools-and-software/index.html
+++ b/tools-and-software/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Bucket Lounge - Official Site">
     <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
     <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../mobile-stylesheet.css" />
     <link rel="stylesheet" href="../printsheet.css" type="text/css" media="print">
