printsheet.css fix

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
           <div>
               <docs id="dcs">Tools and Software: <a id="doocs" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
           </div>
+          <div>
+              <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+          </div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
                 preserveAspectRatio="none"
