--- a/index.html
+++ b/index.html
@@ -12,26 +12,9 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-stylesheet.css" />
     <link rel="stylesheet" href="./printsheet.css" type="text/css" media="print">
-    <link rel="shortcut icon" href="favicons/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="favicons/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="favicons/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="favicons/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="favicons/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16.png">
-	<link rel="apple-touch-icon" href="favicons/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="favicons/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="favicons/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="favicons/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="favicons/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="favicons/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="favicons/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="favicons/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="favicons/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
+    <link rel="icon" type="image/svg+xml" href="favicons/favicon.svg">
+    <link rel="alternate icon" href="favicons/favicon.ico">
+    <link rel="mask-icon" href="favicons/favicon.svg" color="#ff8a01">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bucket Lounge</title>
 </head>
@@ -63,27 +46,28 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_msg"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
+        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
       </div>
         <div class="grid">
           <div>
-              <uptmrobot id="uptmrobot">Current Bot Status: <a id="Uptime", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
+              <uptmrobot class="mediumtext">Current Bot Status: <a class="mediumlink", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
           </div>
           <div>
-              <dscrd id="dscrd">The Discord Server: <a id="Discord", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
+              <dscrd class="mediumtext">The Discord Server: <a class="mediumlink", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
           </div>
           <div>
-              <replt id="replt">Replit Page: <a id="Replit", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
+              <replt class="mediumtext">Replit Page: <a class="mediumlink", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
           </div>
           <div>
-              <githb id="githb">Github Repository: <a id="Github" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
+              <githb class="mediumtext">Github Repository: <a class="mediumlink" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
           </div>
           <div>
-              <docs id="dcs">Tools and Software: <a id="doocs" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
+              <docs class="mediumtext">Tools and Software: <a class="mediumlink" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
           </div>
           <div>
-              <docs id="dcs">Bucket Helper Docs: <a id="doocs" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+              <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
           </div>
+          <div><br></div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
                 preserveAspectRatio="none"
@@ -120,7 +104,7 @@
               </svg>
             </div>
           <div>
-            <p id=big-dc class="grid">Discord</p>
+            <p id=big_Discord class="grid">Discord</p>
             <iframe class="grid" title="Widget" id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="320" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" style="border: 3px solid white; border-radius: 5%;">Discord Widget</iframe>
           </div>
           <div class="wavesupside" id="lastwave">
