css classes not added correctly

--- a/tools-and-software/index.html
+++ b/tools-and-software/index.html
@@ -12,26 +12,9 @@
     <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../mobile-stylesheet.css" />
     <link rel="stylesheet" href="../printsheet.css" type="text/css" media="print">
-    <link rel="shortcut icon" href="../favicons/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="../favicons/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="../favicons/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="../favicons/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../favicons/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="../favicons/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16.png">
-	<link rel="apple-touch-icon" href="../favicons/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="../favicons/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="../favicons/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="../favicons/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="../favicons/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="../favicons/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="../favicons/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="../favicons/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="../favicons/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="../favicons/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
+      <link rel="icon" type="image/svg+xml" href="../favicons/favicon.svg">
+    <link rel="alternate icon" href="../favicons/favicon.ico">
+    <link rel="mask-icon" href="../favicons/favicon.svg" color="#ff8a01">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bucket Lounge - Tools and Software</title>
 </head>
@@ -63,23 +46,23 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_msg" style="text-align: center;"><br><br>All the Tools and Software I'm using!<br><br>Software:</welcome_msg>
+        <welcome_msg id="welcome_message" style="text-align: center;"><br><br>All the Tools and Software I'm using!<br><br>Software:</welcome_msg>
       </div>
         <div class="grid">
           <div>
-              <uptmrobot id="uptmrobot">Visual Studio Code: <a id="Uptime", href="https://code.visualstudio.com/", type="submit">Visual Studio</a></uptmrobot>
+              <uptmrobot class="mediumtext">Visual Studio Code: <a class="mediumlink" href="https://code.visualstudio.com/", type="submit">Visual Studio</a></uptmrobot>
           </div>
           <div>
-              <dscrd id="dscrd">Git/Github <a id="Discord", href="https://github.com/", type="submit">Github</a></dscrd>
+              <dscrd class="mediumtext">Git/Github <a class="mediumlink" href="https://github.com/", type="submit">Github</a></dscrd>
           </div>
           <div>
-              <replt id="replt">Replit: <a id="Replit", href="https://repl.it/", type="submit">Replit</a></replt>
+              <replt class="mediumtext">Replit: <a class="mediumlink" href="https://repl.it/", type="submit">Replit</a></replt>
           </div>
           <div>
-              <githb id="githb">Uptime Robot: <a id="Github" href="https://uptimerobot.com/" type="submit">Uptime Robot</a></githb>
+              <githb class="mediumtext">Uptime Robot: <a class="mediumlink" href="https://uptimerobot.com/" type="submit">Uptime Robot</a></githb>
           </div>
           <div>
-              <docs id="dcs">Bucket Lounge: <a id="doocs" href="https://bucketlounge.tk/index.html">Go Back</a></docs>
+              <docs class="mediumtext">Bucket Lounge: <a class="mediumlink" href="https://bucketlounge.tk/index.html">Go Back</a></docs>
           </div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
@@ -117,7 +100,7 @@
               </svg>
             </div>
           <div>
-            <p id=big-dc class="grid">Discord</p>
+            <p id=big_Discord class="grid">Discord</p>
             <iframe class="grid" title="Widget" id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="320" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" style="border: 3px solid white; border-radius: 5%;">Discord Widget</iframe>
           </div>
           <div class="wavesupside" id="lastwave">
