--- a/foo.html
+++ b/foo.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
+<DOCTYPE HTML>
 <head>
-
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div id="somediv"></div>
-    <script>
-        var btn = dodocument.createElement("button");
-        btn.type = "button";
-        btn.InnerHTML = "hack Now";
-        function name() {
-            alert("hey :) ")
-        };
-
-        btn.onclick() = name;
-    </script>
+    <p><b>Hallo Florian!</p>
+    <textarea>ok</textarea>
 </body>
