--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
+        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.<br>Merry Christmas 🎅</welcome_msg>
       </div>
         <div class="grid">
           <div>
@@ -66,6 +66,7 @@
           </div>
           <div>
               <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+
           </div>
           <div><br></div>
             <div class="wavesupside" style="margin-top: 2%">
