Remove Merry Christmas - Happy new year everyone

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </svg>
       </div>
       <div class="grid">
-        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.<br>Merry Christmas 🎅</welcome_msg>
+        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
       </div>
         <div class="grid">
           <div>
