Stand with Ukraine

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
               <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
 
           </div>
+          <div>
+              <p class="mediumtext" id="ukraine">Stand with Ukraine 🇺🇦</p>
+          </div>
           <div><br></div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
