--- a/docs.html
+++ b/docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="refresh" content="3; url='https://docs.bucketlounge.tk/'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>**Currently in development**</title>
 </head>
@@ -10,11 +10,7 @@
 </body>
 <body>
     <div>
-        <h1 style="font-family: Roboto;">^-^ In Development ^-^</h1>
-    </div>
-    <div>
-        <text style="font-family: Roboto; font-weight: 500;">This section is currently under development...<br>Check back later.
-        </text>
+        <h1 style="font-family: Roboto">You're being redirected to <a href="https://docs.bucketlounge.tk" alt="Docs Website">docs.bucketlounge.tk</a>.</h1>
     </div>
     <div>
         <text style="font-family: Roboto;">Return to</text>
