--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="3; url='https://docs.bucketlounge.tk/'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>**Currently in development**</title>
+    <title>Redirecting...</title>
 </head>
 <body>
 </body>
