--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
               <docs class="mediumtext">Tools and Software: <a class="mediumlink" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
           </div>
           <div>
-              <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://bucketlounge.tk/docs.html">Docs</a></docs>
+              <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://docs.bucketlounge.tk/">Docs</a></docs>
 
           </div>
           <div>
-              <p class="mediumtext" id="ukraine">Stand with Ukraine 🇺🇦</p>
+              <p>Blog out soon! 😉</p>
           </div>
           <div><br></div>
             <div class="wavesupside" style="margin-top: 2%">
